--- a/index.html
+++ b/index.html
@@ -2,9 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Keymden Analytics - Tech Courses for the African Demographic</title>
+    <meta
+      name="description"
+      content="Unlock your potential with Keymden Analytics' tech courses designed for the African demographic. Gain valuable skills in data and code with our industry-leading instructors. Join us today!"
+    />
+    <meta
+      name="keywords"
+      content="tech courses, data courses, code courses, African demographic, tech skills, Keymden Analytics, online learning"
+    />
+    <meta name="author" content="Keymden Analytics" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/logo.png" />
+
+    <!-- Open Graph meta tags for social media sharing -->
+    <meta
+      property="og:title"
+      content="Keymden Analytics - Tech Courses for the African Demographic"
+    />
+    <meta
+      property="og:description"
+      content="Unlock your potential with Keymden Analytics' tech courses designed for the African demographic. Gain valuable skills in data and code with our industry-leading instructors. Join us today!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.keymdenanalytics.com" />
+    <meta
+      property="og:image"
+      content="https://www.keymdenanalytics.com/images/og-image.jpg"
+    />
+    <meta
+      property="og:image:alt"
+      content="Keymden Analytics - Tech Courses for the African Demographic"
+    />
+
+    <!-- Twitter Card meta tags for Twitter sharing -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Keymden Analytics - Tech Courses for the African Demographic"
+    />
+    <meta
+      name="twitter:description"
+      content="Unlock your potential with Keymden Analytics' tech courses designed for the African demographic. Gain valuable skills in data and code with our industry-leading instructors. Join us today!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.keymdenanalytics.com/images/twitter-image.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
